--- a/Proiect_Tabelare_si_Vizualizare.ipynb
+++ b/Proiect_Tabelare_si_Vizualizare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "5601f02b-bdd0-4a03-aea7-7e99b4145bcd",
    "metadata": {
     "tags": []
@@ -11,12 +11,13 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import Functionalitati"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "ac2a2aba-1d1e-49eb-be90-5c9e5b67276f",
    "metadata": {
     "tags": []
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "f7c834e1-f5b4-4c75-ab9f-1bf97e38cc9e",
    "metadata": {
     "tags": []
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "b2e5e90c-24de-4397-9f3f-b49b22d273d9",
    "metadata": {
     "tags": []
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "c0726a73-3f97-4f6b-95b5-b584b9f56efb",
    "metadata": {
     "tags": []
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "4d774669-8c28-4aa0-b897-5254a1eeac18",
    "metadata": {
     "tags": []
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "9882c048-0d9d-437d-95de-ffd526af3831",
    "metadata": {
     "tags": []
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "72346d16-ea36-496a-90ef-8619e9b82f96",
    "metadata": {
     "tags": []
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "54aedb6b-9885-4675-996f-dcc48f027c78",
    "metadata": {},
    "outputs": [],
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "id": "f8186130-79cd-418e-b5fc-9c8c81012342",
    "metadata": {
     "tags": []
@@ -234,7 +235,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
+   "id": "00f53947-2c5d-4540-9ddf-d187089a1ba2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def city_zone(zone_value):\n",
+    "    zone_value = zone_value.split(\",\")\n",
+    "    if \"iasi\" in zone_value[-2].lower():\n",
+    "        if len(zone_value) == 4:\n",
+    "            zone = zone_value[1]\n",
+    "        else:\n",
+    "            zone = zone_value[0]\n",
+    "    else:\n",
+    "        if len(zone_value) >= 3:\n",
+    "            zone = zone_value[1]\n",
+    "        else:\n",
+    "            zone = zone_value[0]\n",
+    "    return zone.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a2f271c1-2618-47ab-b616-d4ee14870c80",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def year_mode(zone_value, year_value, df):\n",
+    "    if year_value == 0:\n",
+    "        zone_mode = df[df['Zona Oras'] == zone_value]['Anul construcției'].mode().to_list()[0]\n",
+    "    else:\n",
+    "        zone_mode = year_value\n",
+    "    return zone_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "155e9f02-364a-457f-bb2f-37a6bfc540f0",
    "metadata": {
     "tags": []
@@ -247,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "d430492c-7cba-4a25-a4bb-4c194fd0aee1",
    "metadata": {
     "tags": []
@@ -260,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "1dfc5747-58a7-4885-bafa-55e348439ef9",
    "metadata": {
     "tags": []
@@ -273,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "id": "0e86b27a-f2f5-4492-9b07-a8f58d2f6034",
    "metadata": {
     "tags": []
@@ -286,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "id": "b48c2965-8274-4bcd-a0cc-1154646122eb",
    "metadata": {
     "tags": []
@@ -299,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "9fd13249-ab1d-4091-9b52-3782102e1068",
    "metadata": {
     "tags": []
@@ -312,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "08f53b99-531c-4d6e-a6c3-fdf83bfdaadb",
    "metadata": {
     "tags": []
@@ -325,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "e03df19a-dcad-4b20-b65a-4fdc5e8d80d6",
    "metadata": {
     "tags": []
@@ -338,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "715126f4-34f9-4924-8817-e055fa608d49",
    "metadata": {
     "tags": []
@@ -351,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "id": "ccc9ac9d-3b47-4315-8eb8-3f0e07e11061",
    "metadata": {
     "tags": []
@@ -364,7 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
+   "id": "9bbd49d5-cc1d-4926-858c-7ee2753df856",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "vanzare_df['Garaj/loc de parcare'].replace(np.nan, \"Fara loc\", inplace=True)\n",
+    "inchiriere_df['Garaj/loc de parcare'].replace(np.nan, \"Fara loc\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ba0d2224-165f-4aec-8883-b1dd3557f095",
    "metadata": {
     "tags": []
@@ -379,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "id": "47a6500e-2af3-4139-8796-6125f4189df3",
    "metadata": {
     "tags": []
@@ -394,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "id": "6be384df-2654-4830-b427-7129fc6263bb",
    "metadata": {
     "tags": []
@@ -408,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "id": "9c3c21e2-50c1-4379-bf8e-254953d1a569",
    "metadata": {
     "tags": []
@@ -422,20 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "9bbd49d5-cc1d-4926-858c-7ee2753df856",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "new_vanzare_df['Garaj/loc de parcare'].replace(np.nan, \"Fara loc\", inplace=True)\n",
-    "new_inchiriere_df['Garaj/loc de parcare'].replace(np.nan, \"Fara loc\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "id": "bec9b8fd-4b8b-416f-9f3c-b0b5cd4bc651",
    "metadata": {
     "tags": []
@@ -449,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "id": "dd201be6-0c74-4de9-87d1-626d934a1ac2",
    "metadata": {},
    "outputs": [],
@@ -461,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "id": "e4754e96-eae5-4fa3-8beb-5e8a9a7d48a1",
    "metadata": {
     "tags": []
@@ -475,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "id": "83db3d39-63a3-446c-88c2-9c55d2c1981c",
    "metadata": {
     "tags": []
@@ -489,7 +531,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 32,
+   "id": "d95d5340-2af3-4a01-9730-79e958ea5ad4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "new_vanzare_df['Zona Oras'] = new_vanzare_df['Zona'].apply(city_zone)\n",
+    "new_inchiriere_df['Zona Oras'] = new_inchiriere_df['Zona'].apply(city_zone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d9b9ef41-c7e9-4d45-9ed6-3648b5408bd3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "new_vanzare_df[\"Anul construcției\"] = new_vanzare_df.apply(lambda df:\n",
+    "                                                              year_mode(df['Zona Oras'], df[\"Anul construcției\"], new_vanzare_df), axis=1)\n",
+    "new_inchiriere_df[\"Anul construcției\"] = new_inchiriere_df.apply(lambda df:\n",
+    "                                                              year_mode(df['Zona Oras'], df[\"Anul construcției\"], new_inchiriere_df), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "e05a85d9-add5-4de4-af84-3fe2a81796e9",
    "metadata": {
     "tags": []
@@ -504,8 +574,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "8e1727c0-60af-4faa-9e8a-5e725ca8c5fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Zona</th>\n",
+       "      <th>Pret</th>\n",
+       "      <th>Suprafață</th>\n",
+       "      <th>Numărul de camere</th>\n",
+       "      <th>Anul construcției</th>\n",
+       "      <th>Etaj apartament</th>\n",
+       "      <th>Numar Etaj Bloc</th>\n",
+       "      <th>Garaj/loc de parcare</th>\n",
+       "      <th>Zona Oras</th>\n",
+       "      <th>Cutremur</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Podu Ros, Iasi, Iasi</td>\n",
+       "      <td>168000</td>\n",
+       "      <td>66.18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Fara loc</td>\n",
+       "      <td>Podu Ros</td>\n",
+       "      <td>Sigur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dacia, Iasi, Iasi</td>\n",
+       "      <td>128000</td>\n",
+       "      <td>81.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Fara loc</td>\n",
+       "      <td>Dacia</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Podu de Fier, Iasi, Iasi</td>\n",
+       "      <td>396000</td>\n",
+       "      <td>230.00</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>parcare</td>\n",
+       "      <td>Podu de Fier</td>\n",
+       "      <td>Sigur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Agronomie, Iasi, Iasi</td>\n",
+       "      <td>102405</td>\n",
+       "      <td>68.27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Fara loc</td>\n",
+       "      <td>Agronomie</td>\n",
+       "      <td>Sigur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Soseaua Nicolina, CUG, Iasi, Iasi</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>78.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Fara loc</td>\n",
+       "      <td>CUG</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4484</th>\n",
+       "      <td>Bucium, Iasi, Iasi</td>\n",
+       "      <td>55000</td>\n",
+       "      <td>52.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>parcare</td>\n",
+       "      <td>Bucium</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4485</th>\n",
+       "      <td>Soseaua Nicolina, Nicolina 1, Iasi, Iasi</td>\n",
+       "      <td>98000</td>\n",
+       "      <td>96.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Fara loc</td>\n",
+       "      <td>Nicolina 1</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4486</th>\n",
+       "      <td>Strada Baltagului, Agronomie, Iasi, Iasi</td>\n",
+       "      <td>86850</td>\n",
+       "      <td>64.50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>parcare</td>\n",
+       "      <td>Agronomie</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4487</th>\n",
+       "      <td>Strada Baltagului, Agronomie, Iasi, Iasi</td>\n",
+       "      <td>115075</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>parcare</td>\n",
+       "      <td>Agronomie</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4488</th>\n",
+       "      <td>Strada Baltagului, Agronomie, Iasi, Iasi</td>\n",
+       "      <td>97290</td>\n",
+       "      <td>79.20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>parcare</td>\n",
+       "      <td>Agronomie</td>\n",
+       "      <td>Te simti norocos?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4166 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Zona    Pret  Suprafață  \\\n",
+       "0                         Podu Ros, Iasi, Iasi  168000      66.18   \n",
+       "1                            Dacia, Iasi, Iasi  128000      81.00   \n",
+       "2                     Podu de Fier, Iasi, Iasi  396000     230.00   \n",
+       "3                        Agronomie, Iasi, Iasi  102405      68.27   \n",
+       "4            Soseaua Nicolina, CUG, Iasi, Iasi  120000      78.00   \n",
+       "...                                        ...     ...        ...   \n",
+       "4484                        Bucium, Iasi, Iasi   55000      52.00   \n",
+       "4485  Soseaua Nicolina, Nicolina 1, Iasi, Iasi   98000      96.00   \n",
+       "4486  Strada Baltagului, Agronomie, Iasi, Iasi   86850      64.50   \n",
+       "4487  Strada Baltagului, Agronomie, Iasi, Iasi  115075      88.00   \n",
+       "4488  Strada Baltagului, Agronomie, Iasi, Iasi   97290      79.20   \n",
+       "\n",
+       "      Numărul de camere  Anul construcției Etaj apartament Numar Etaj Bloc  \\\n",
+       "0                     2               2015               4               4   \n",
+       "1                     3               1989               8               9   \n",
+       "2                     5               2001               3               3   \n",
+       "3                     3               2023               2               2   \n",
+       "4                     3               2023               6              10   \n",
+       "...                 ...                ...             ...             ...   \n",
+       "4484                  2               2021               4               7   \n",
+       "4485                  4               1988               7               7   \n",
+       "4486                  2               2022               2              10   \n",
+       "4487                  3               2022               3              10   \n",
+       "4488                  2               2022               1              10   \n",
+       "\n",
+       "     Garaj/loc de parcare     Zona Oras           Cutremur  \n",
+       "0                Fara loc      Podu Ros              Sigur  \n",
+       "1                Fara loc         Dacia  Te simti norocos?  \n",
+       "2                 parcare  Podu de Fier              Sigur  \n",
+       "3                Fara loc     Agronomie              Sigur  \n",
+       "4                Fara loc           CUG  Te simti norocos?  \n",
+       "...                   ...           ...                ...  \n",
+       "4484              parcare        Bucium  Te simti norocos?  \n",
+       "4485             Fara loc    Nicolina 1  Te simti norocos?  \n",
+       "4486              parcare     Agronomie  Te simti norocos?  \n",
+       "4487              parcare     Agronomie  Te simti norocos?  \n",
+       "4488              parcare     Agronomie  Te simti norocos?  \n",
+       "\n",
+       "[4166 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_vanzare_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6b2ef0ab-b0de-454d-bbfb-892d5b5b43b0",
+   "id": "e1722dd2-7375-4bc1-a0fc-f642e652616d",
    "metadata": {},
    "outputs": [],
    "source": []
